# gen-crawler-ui

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  build.sh  docker-compose.dev.yml  docker-compose.yml  env-template.sh  gen-crawler-ui.code-workspace  metadataapi.Dockerfile  metadataapi.Dockerfile.dockerignore  pylint-debug.py  pyproject.toml  pyproject_old.toml  requirements.txt  scraper.Dockerfile  scraper.Dockerfile.dockerignore  web.Dockerfile
.github/workflows/: publish.yml
browser/: browser-entrypoint.sh  browser.Dockerfile
database/: db.sqlite3  db.sqlite3-journal
docs/: SQL.md  fields.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend-spa/: index.html  package-lock.json  package.json  test_component.html  test_sidebar.html  tsconfig.lib.json  vite.config.ts
frontend-spa/.storybook/: preview.ts
frontend-spa/lib/: main.js
frontend-spa/src/: AddCrawlerPage.tsx  ApiUrlContext.tsx  App.tsx  Breadcrumbs.css  Breadcrumbs.tsx  Button.css  Button.tsx  Checkbox.stories.tsx  CrawlerDetailsPage.tsx  CrawlerTable.stories.tsx  CrawlerTable.tsx  CustomIcon.stories.tsx  CustomIcon.tsx  DashboardPage.stories.tsx  DashboardPage.tsx  DeleteCrawlerDialog.tsx  FilterCrawlsPage.tsx  FilterSetPage.tsx  FilterSetPageSidebar.tsx  FilterSetTable.tsx  FilterTabs.css  FilterTabs.module.css  FilterTabs.tsx  GenCrawlerSidebar.tsx  InheritableWloField.stories.tsx  InheritableWloField.tsx  InputWithButton.css  InputWithButton.stories.tsx  InputWithButton.tsx  ListView.css  ListView.tsx  MdsEditor.stories.tsx  MdsEditor.tsx  MetadataInheritancePage.stories.tsx  MetadataInheritancePage.tsx  RootContext.tsx  RootLayout.tsx  RuleTable.tsx  SelectSourcePage.tsx  Sheet.css  (+31 more)
frontend-spa/src/elements/: Button.tsx  index.ts  wlo-gen-crawler-sidebar.tsx  wlo-gen-crawler.tsx
frontend-spa/src/fixtures/: lehrer-online_site_tree.json  omathe_site_tree.json  scienceinschool_site_tree.json  serlo_site_tree.json  testSourceItem.json
frontend-spa/src/hooks/: useSSE.ts
frontend-spa/src/stories/: Breadcrumbs.stories.ts  Breadcrumbs.stories.tsx  Button.stories.ts  FilterTabs.stories.ts
frontend/assets_output/: index.css  manifest.json
frontend/assets_output/assets/: client-DFgYQUdv.js  css-DOrf2AlJ.css  demo-CU-C4i1p.js  demo-DEmrpTTR.css  main-CaiUJy1E.js  main-D3DiyIuV.js  main-D9fjUwis.css  wlo_spa-B80QnU3L.js  wlo_spa-BdijYqjM.js  wlo_spa-Dg-vj2yH.css
frontend/src/: App.css  App.tsx  RuleTable.tsx  Timeline.tsx  demo.tsx  index.css  main.tsx  schema.tsx  timeline.css  wlo_spa.tsx
gensitemap/: .pylintrc
gensitemap/frontend/src/: App.tsx  index.css
gensitemap/scraper/scraper/: pipelines.py  settings.py
gensitemap/scraper/scraper/spiders/: example.py
gensitemap/ui/crawler_ui/: settings.py
gensitemap/ui/crawls/: admin.py  serializers.py  views.py
gensitemap/ui/scripts/: dump_urls.py  prefix_search.py  prefix_search_radix.py
helm/: generic-crawler.yml
metadataapi/: hello.py  main.py  pyproject.toml
metadataenricher/: pyproject.toml  try_metadata_enricher.py
metadataenricher/src/metadataenricher/: __init__.py  env.py  metadata_enricher.py  test_metadata_enricher.py  valuespace_converter  web_tools.py
metadataenricher/src/metadataenricher/util/: edu_sharing_precheck.py  generic_crawler_db.py  license_mapper.py  test_license_mapper.py
scraper/: .dockerignore  Dockerfile  bread-lehrer-online.jsonlines  bread-serlo.jsonlines  bread.jsonlines  bread.py  build_site_tree.py  demo_playwright.py  items-klexikon.jsonlines  items-serlo.jsonlines  pyproject.toml  requirements.txt  scrapyd.conf  setup.py
scraper/edu_sharing_client/: rest.py
scraper/scraper/: es_connector.py  items.py  log_utils.py  pipelines.py  pipelines_edusharing.py  settings.py  valuespace_helper.py  web_tools.py
scraper/scraper/spiders/: content.py  example.py  exploration.py  generic-crawler-start-urls.txt  generic_spider.py  metadata_enricher.py  state_helper.py  utils.py
scraper/scraper/spiders/base_classes/: __init__.py  csv_base.py  edu_sharing_base.py  lernprogramme_spider_base.py  lom_base.py  mediawiki_base.py  oai_base.py  rss_list_base.py
scraper/scraper/util/: edu_sharing_precheck.py  edu_sharing_source_template_helper.py  generic_crawler_db.py  language_mapper.py  license_mapper.py  test_license_mapper.py
scraper/valuespace_converter/app/: valuespaces.py
ui/: .dockerignore  .pylintrc  Dockerfile  aggregator.py  db.sqlite3  pyproject.toml  requirements.txt  send_fake_updates.py  test_aggregator.py
ui/crawler_ui/: settings.py  urls.py  views.py
ui/crawler_ui/templates/: base.html  crawl_detail.html  crawls_list.html  filterset_create.html  filterset_detail.html  index.html  start_crawl.html  wlo_spa.html
ui/crawler_ui/templates/registration/: login.html
ui/crawls/: __init__.py  admin.py  admin_utils.py  fields_processor.py  forms.py  models.py  pyproject.toml  serializers.py  test_models.py  views.py
ui/crawls/migrations/: 0007_annotatedcrawljob_crawledurl_noindex.py  0008_alter_crawledurl_unique_together.py  0009_crawler.py  0010_sourceitem.py  0011_crawler_inherited_fields.py  0012_crawljob_crawler.py  0013_crawljob_state.py  0014_remove_filterset_crawl_job_filterset_crawler.py  0015_crawljob_scrapy_job_id.py  0016_crawljob_crawl_type.py  0017_sourceitem_description.py  0018_add_canceled_state.py  0019_crawljob_urls_processed.py
ui/crawls/static/gen-crawler/: index.js  style.css
ui/data/: es_sources_dump.json  mds_oeh.json  metadata.json
ui/scripts/: prefix_search_radix.py  prefix_search_radix2.py  radix.py  update_es_sources.py
ui/static/: index.css  index.html
ui/static/assets/: client-DJJ63Tcp.js  css-9ZX7evUj.css  css-DKoq5nd6.css  css-Dq5wE4hz.css  demo-9tqYKfTj.js  main-BU8GGDjk.css  main-Brk9oY_w.css  main-C02ZHg6G.js  main-C2BTBHgY.js  main-CcdtcX9u.js  main-ClctuXgr.js  main-D_ClqAHI.css  main-Doc_XTBZ.js  main-ahhbgbuL.js
ui/static/gen-crawler/: index.js  style.css  test_sidebar.html
valuespace-converter/: pyproject.toml
valuespace-converter/src/valuespace_converter/: __init__.py  valuespaces.py
