[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gen-crawler-sitemap"
authors = [{name = "Jason Mansour", email = "jason.mansour@gwdg.de"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
version = "2024.0.0"
requires-python = ">= 3.10"