[tool.poetry]
name = "gensitemap"
version = "0.1.0"
description = ""
authors = ["Jason Mansour <jason.mansour@gwdg.de>"]
license = "LICENSE"
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
