[project]
name = "metadataapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.8",
    "html2text>=2024.2.26",
    "openai>=1.64.0",
    "playwright>=1.50.0",
    "project",
    "requests>=2.32.3",
    "scrapy>=2.12.0",
    "trafilatura>=2.0.0",
]

[tool.uv.sources]
project = { path = "../scraper" }
