[project]
name = "metadataapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "metadataenricher",
    "pydantic-settings>=2.8.1",
]

[tool.uv.sources]
metadataenricher = { path = "../metadataenricher", editable = true }
