[project]
name = "metadataenricher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mansour", email = "jason.mansour@gwdg.de" }
]
requires-python = ">=3.10"
dependencies = [
    "valuespace-converter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
valuespace-converter = { path = "../valuespace-converter", editable = true }
