[project]
name = "metadataenricher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mansour", email = "jason.mansour@gwdg.de" }
]
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "html2text>=2024.2.26",
    "metadataenricher",
    "openai>=1.64.0",
    "playwright~=1.49.0",
    "requests>=2.32.3",
    "scrapy>=2.12.0",
    "trafilatura>=2.0.0",
    "valuespace-converter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
valuespace-converter = { path = "../valuespace-converter", editable = true }
