[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.8.1",
    "async-lru==2.0.4",
    "html2text==2024.2.26",
    "httpx==0.27.2",
    "isodate>=0.7.2",
    "langcodes==3.4.0",
    "metadataenricher",
    "openai>=1.64.0",
    "pillow==10.4.0",
    "platformdirs==4.2.2",
    "playwright~=1.49.0",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "scrapy>=2.11.2",
    "scrapyd==1.4.3",
    "scrapyd-client==1.2.3",
    "sqlparse==0.5.1",
    "trafilatura>=2.0.0",
    "valuespace-converter",
    "vobject==0.9.7",
]

[tool.uv.sources]
valuespace-converter = { path = "../valuespace-converter", editable = true }
metadataenricher = { path = "../metadataenricher", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.4",
    "types-beautifulsoup4>=4.12.0.20250204",
]
