[project]
name = "valuespace-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Mansour", email = "jason.mansour@gwdg.de" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
