[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-crawler-crawls"
dependencies = [
  "Django>=5.0.6",
]
requires-python = ">=3.12"
authors = [
  {name = "Jason Mansour", email = "jason.mansour@gwdg.de"},
]
# dynamic = ["version", "description"]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = [".."]
include = ["crawls"]
namespaces = false

# readme = "README.md"
# license = {file = "LICENSE.txt"}
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
